validation if type libary not found